--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ build/built-jar.properties
 build/classes/.netbeans_automatic_build
 build/classes/.netbeans_update_resources
 nbproject/private/private.properties
+/build/
